--- a/template/index.html
+++ b/template/index.html
@@ -28,6 +28,8 @@ PASSWORD:<input type="text" name="name" id="Pwd"></p>
 CONFIRM PASSWORD :<input type="text" name="name" id="CPwd"></p>
 </form>
 <button class="button" id="submit" onclick="location.href=''">Register</button>
+<button class="button" id="AddNew" onclick="location.href='login.html'">SIGN IN</button>
+
 <button class="button" id="submit" onclick="location.href='creategroup.html'">CREATE GROUP</button>
 
 
