--- a/template/noticeboard.html
+++ b/template/noticeboard.html
@@ -2,7 +2,7 @@
 <head>
 <title>WELCOME TO THE NOTICE BOARD </title>
 <link href="https://fonts.googleapis.com/css?family=Quicksand:300|Yantramanav:900" rel="stylesheet">
-<link href="css/notice.css" rel="stylesheet" type="text/css">
+<link href="css/notice.css" rel="stylesheet" type="text/css"></link>
 </head>
 <body>
 
