react post it app updated

--- a/client/template/index.html
+++ b/client/template/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>POST IT </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -11,12 +12,11 @@
 <body>
 
   <nav>
-    <div class="nav-wrapper  teal darken-4">
-      <a href="#" class="brand-logo">Post it</a>
+    <div class="nav-wrapper  teal lighten-2">
+      <a href="index.html" class="brand-logo">Post it</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="signup.html">SignUp</a></li>
         <li><a href="login.html">LogIn</a></li>
-        <li><a href="collapsible.html">LogOut</a></li>
       </ul>
     </div>
   </nav>
@@ -52,39 +52,13 @@
         </div>
       </li>
     </ul>
+    <br></br>
 
-    		<div class =".four.columns">
-    			<i class="material-icons">work</i><br>
-    			<br>
-    			Reach out to your family members through post it app for optimised medssaging al the way come andejoyReach out to your family membersthrough post it app for optimised medssagingReach out to your family members through post it app for optimised medssagingReach out to your family members through post it app for optimised medssagingReach out to your family members through post it app for optimised medssagingReach out to your family members through post it app for optimised medssaging
-    		</div>
-    		<div class =".four.columns">
-    			<i class="material-icons">work</i><br>
-    			<br>
-    			Reach out to your family members through post it app for optimised medssagingReach out to your family members through post it app for optimised medssagingReach out to your family members through post it app for optimised medssagingReach out to your family members through post it app for optimised medssagingReach out to your family members through post it app for optimised medssagingReach out to your family members through post it app for optimised medssagingReach out to your family members through post it app for optimised medssagingReach out to your family members through post it app for optimised medssagingReach out to your family members through post it app for optimised medssagingReach out to your family members through post it app for optimised medssaging
-    		</div>
-    		<div class =".four.columns">
-    			<i class="material-icons">work</i>
-    			Reach out to your family members through post it app for optimised medssaging
-    		</div>
-    	</div>
     
-  </div>
-      <br>
-    <br>
-    <br>
-    <div class="container">
-    	<div class="row>">
-    		<div class= ".six .columns">1</div>
-    		<div class= ".six .columns">2</div>
-
-  <div class="container"></div>
-      <div class= "row">
       <script> $(document).ready(function(){
       $('.slider').slider();
     });</script>
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 </div>
 </body>
