--- a/client/template/signup.html
+++ b/client/template/signup.html
@@ -5,7 +5,8 @@
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+      <link href="css/signup.css" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" href="asset/css/materialize.min.css">
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -13,65 +14,57 @@
     </head>
 
     <body>
-
-      <div class="navbar-fixed">
-    <nav>
-      <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Postit</a>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="index.html">sign up</a></li>
-          <li><a href="creategroup.html">Login</a></li>
-        </ul>
-      </div>
-    </nav>
-  </div>
-       <div class="container">
-<div class="black white-text lighten-1 center"><h2> Register here</h2> </div>
-  <div class="row">
-    <form class="col s12">
+<body>
+   
+  <div class="card-panel teal lighten-2 white-text center"><h3>REGISTER HERE</h3> 
+    <div class="createuser">
+    <div class="row">
+    <form class="col m12">
       <div class="row">
-        <div class="input-field col s6">
+        <div class="input-field col s6 text-white">
           <input placeholder="enter username" id="name" type="text" class="validate">
-          <label for="name center">name</label>
+          <label for="name center">Name</label>
         </div>
       </div>
-      </div>
-      <div class="row">
+
+          <div class="row">
         <div class="col s12">
-            <div class="input-field col s12">
+            <div class="input-field col s12 text-white">
             <input id="email" type="email" class="validate">
             <label for="email" data-error="invalid email" data-success="right">email</label>
           </div>
         </div>
+      </div>
         <div class="row">
-        <div class="input-field col s12">
+        <div class="input-field col s12 text-white">
           <input id="password" type="password" class="validate">
           <label for="password">password</label>
         </div>
       </div>
       <div class="row">
-        <div class="input-field col s12">
+        <div class="input-field col s12 text-white">
           <input id="password" type="password" class="validate">
           <label for="password">confirmpassword</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="password" type="password" class="validate">
-          <label for="password">confirmpassword</label>
+          <input id="phone" type="number" class="validate">
+          <label for="phone">phone</label>
         </div>
       </div>
-      </div>         
-   <button class="btn waves-effect btn-large text-white pink">Enter</button>
-   <button class="btn waves-effect btn-large text-white pink">login</button>
+       <br></br>
+
+    <button type="submit" class="btn waves-effect btn-large text-white pink">SUBMIT</button><a href="login.html"class="btn waves-effect btn-large text-white pink">login</button></a>        
 
   </form> 
   </div>
-</div>   
-</div>
+</div> 
+</div>  
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+
     </body>
  
   </html>
